Fix nav background when header behind.

--- a/src/styles/layout/_page-head.scss
+++ b/src/styles/layout/_page-head.scss
@@ -19,6 +19,8 @@
   display: flex;
   align-items: center;
   padding: 0;
+  z-index: 1;
+  position: relative;
 }
 
 .page-header .page-nav {
@@ -54,7 +56,7 @@
   color: $color-black;
 }
 
-body.page--heroBehindNav .page-header {
+body.page--heroBehindNav .page-header:not(.page-header--sticky) {
   background-color: transparent;
 }
 
