--- a/src/styles/layout/_page-hero.scss
+++ b/src/styles/layout/_page-hero.scss
@@ -210,10 +210,6 @@ p.page-heroContent {
   z-index: 0;
 }
 
-.page-heroStyle--behindNav {
-  z-index: -1;
-}
-
 .page-heroVideoContainer {
   position: absolute;
   top: 0;
